--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,8 +1,13 @@
+<section class="merchant_list">
+  <h2>Check out these fine stores...</h2>
 <% @merchants.each do |merchant| %>
+  <section class="merchant_item">
   <ul>
-    <li> <%= merchant.username %> </li>
-    <li> <%= merchant.email %> </li>
-    <li> <%= merchant.provider %> </li>
-    <li> <%= merchant.uid %> </li>
+    <li> <h3><%= link_to merchant.username, merchant_path(merchant) %> </h3></li>
+    <li> Email: <%= merchant.email %> </li>
+<!--    <li> <%#= merchant.provider %> </li>-->
+<!--    <li> <%#= merchant.uid %> </li>-->
+  </section>
   </ul>
 <% end %>
+</section>
