--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Petsy</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,15 +15,46 @@
 
   <body>
     <header>
-      <nav> 
-        <% if @current_merchant %>
-          <strong>Welcome <%= @current_merchant.username %></strong>
-            <%= link_to "Log out", logout_path, method: "delete", class: "btn btn-primary" %>
-        <% else %>
-          <%= link_to "Login with Github", github_login_path, class: "btn btn-primary" %>
-        <% end %>
+      <!-- Navigation -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+          <%= link_to "pEtsy Shop", root_path, class: "navbar-brand" %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <%= link_to "Home", root_path, class: "nav-link" %>
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Merchants", merchants_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Products", products_path, class: "nav-link" %>
+              </li>
+                <% if @current_merchant %>
+                <li class="nav-item">
+                  <strong class="nav-link">Welcome <%= @current_merchant.username %></strong>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "Log out", logout_path, method: "delete", class: "nav-link" %>
+                </li>
+                <% else %>
+                <li class="nav-item">
+                  <%= link_to "Login with Github", github_login_path, class: "nav-link" %>
+                </li>
+                <% end %>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
+
+    <!-- Alert container -->
     <section class="alert__container">
       <% flash.each do |name, message| %>
         <% if name == "success" %>
@@ -34,8 +69,55 @@
       <% end %>
   </section>
 
+    <!-- Search bar -->
+    <div class="container">
+      <div class="row searchFilter" >
+        <div class="col-sm-12" >
+          <div class="input-group" >
+            <input id="table_filter" type="text" class="form-control" aria-label="Text input with segmented button dropdown" >
+            <div class="input-group-btn" >
+              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><span class="label-icon" >Category</span> <span class="caret" >&nbsp;</span></button>
+              <div class="dropdown-menu dropdown-menu-right" >
+                <ul class="category_filters" >
+                  <li >
+                    <input class="cat_type category-input" data-label="All" id="all" value="" name="radios" type="radio" ><label for="all" >All Products</label>
+                  </li>
+                  <li >
+                    <input type="radio" name="radios" id="Design" value="Design" ><label class="category-label" for="Design" > Category 1</label>
+                  </li>
+                  <li >
+                    <input type="radio" name="radios" id="Marketing" value="Marketing" ><label class="category-label" for="Marketing" >Category 2</label>
+                  </li>
+                  <li >
+                    <input type="radio" name="radios" id="Design" value="Design" ><label class="category-label" for="Design" > Merchant 1</label>
+                  </li>
+                  <li >
+                    <input type="radio" name="radios" id="Marketing" value="Marketing" ><label class="category-label" for="Marketing" > Merchant 2</label>
+                  </li>
+                </ul>
+              </div>
+              <button id="searchBtn" type="button" class="btn btn-secondary btn-search" ><span class="glyphicon glyphicon-search" >&nbsp;</span> <span class="label-icon" >Search</span></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
 
 
     <%= yield %>
+
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; pEtsy 2020</p>
+      </div>
+      <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
