--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,9 @@
                 </li>
                 <% end %>
               </li>
+              <li class="nav-item">
+                <%= link_to "Show Cart", cart_path, class: "nav-link" %>
+              </li>
             </ul>
           </div>
         </div>
