Checkout form, method, routes and migrate

--- a/app/views/orders/cart.html.erb
+++ b/app/views/orders/cart.html.erb
@@ -28,3 +28,5 @@ Your Current Status:  <%= @order.status %>
     </tr>
  <% end %>
 </table>
+
+<%= link_to 'Checkout', checkout_path, class: 'btn btn-primary' %>
