--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header>
+    <section class = "nav-bar-11">
       <!-- Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -59,43 +59,7 @@
           </div>
         </div>
       </nav>
-    </header>
-
-
-
-    <!-- Search bar -->
-    <div class="container">
-      <div class="row searchFilter" >
-        <div class="col-sm-12" >
-          <div class="input-group" >
-            <input id="table_filter" type="text" class="form-control" aria-label="Text input with segmented button dropdown" >
-            <div class="input-group-btn" >
-              <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><span class="label-icon" >Category</span> <span class="caret" >&nbsp;</span></button>
-              <div class="dropdown-menu dropdown-menu-right" >
-                <ul class="category_filters" >
-                  <li >
-                    <input class="cat_type category-input" data-label="All" id="all" value="" name="radios" type="radio" ><label for="all" >All Products</label>
-                  </li>
-                  <li >
-                    <input type="radio" name="radios" id="Design" value="Design" ><label class="category-label" for="Design" > Category 1</label>
-                  </li>
-                  <li >
-                    <input type="radio" name="radios" id="Marketing" value="Marketing" ><label class="category-label" for="Marketing" >Category 2</label>
-                  </li>
-                  <li >
-                    <input type="radio" name="radios" id="Design" value="Design" ><label class="category-label" for="Design" > Merchant 1</label>
-                  </li>
-                  <li >
-                    <input type="radio" name="radios" id="Marketing" value="Marketing" ><label class="category-label" for="Marketing" > Merchant 2</label>
-                  </li>
-                </ul>
-              </div>
-              <button id="searchBtn" type="button" class="btn btn-secondary btn-search" ><span class="glyphicon glyphicon-search" >&nbsp;</span> <span class="label-icon" >Search</span></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
 
     <!-- Alert container -->
     <section class="alert__container">
@@ -115,15 +79,9 @@
     <%= yield %>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer>
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; pEtsy 2020</p>
       </div>
-      <!-- /.container -->
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  </body>
-</html>
