--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,4 +11,8 @@
     <%= f.select :quantity, (1..99) %>
   <li><%= f.submit "Add to Cart" %></li>
   <% end %>
+
+  <% if @current_merchant.id == @product.merchant.id %>
+    <%= link_to "Edit Product", edit_product_path(@product), class: 'btn btn-primary' %>
+  <% end %>
 </ul>
