--- a/app/views/orders/check_out.html.erb
+++ b/app/views/orders/check_out.html.erb
@@ -1,3 +1,6 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <%#= form_with model: @order, method: :post do |f| %>
 
     <%#= f.label :email  %>
@@ -66,8 +69,7 @@
               <i class="fa fa-cc-mastercard" style="color:red;"></i>
               <i class="fa fa-cc-discover" style="color:orange;"></i>
             </div>
-            <label for="cname">Name on Card</label>
-            <input type="text" id="cname" name="cardname" placeholder="John More Doe">
+
             <label for="ccnum">Credit card number</label>
             <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
             <label for="expmonth">Exp Month</label>
@@ -79,7 +81,7 @@
                 <input type="text" id="expyear" name="expyear" placeholder="2018">
               </div>
               <div class="col-50">
-                <label for="cvv">CVV</label>
+                <label for="cvv">Security Code</label>
                 <input type="text" id="cvv" name="cvv" placeholder="352">
               </div>
             </div>
