Added styling to checkout form, added fields for city and state, added strong params for city and state.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10277,4 +10277,10 @@ label {
   margin-bottom: 30px;
 }
 
+//checkout style
+.container-form {
+  margin-top: 60px;
+  margin-bottom: 40px;
+
+}
 
