Added styling to checkout form, added fields for city and state, added strong params for city and state.

--- a/app/views/orders/check_out.html.erb
+++ b/app/views/orders/check_out.html.erb
@@ -11,7 +11,7 @@
 <!--            <label for="fname"><i class="fa fa-user"></i> Full Name </label>-->
 <!--            <input type="text" id="fname" name="firstname" >-->
             <%= f.label :name do %><i class="fa fa-user"></i> Full Name <% end %>
-            <%= f.text_field :name, placeholder: "John M. Doe" %>
+            <%= f.text_field :name, placeholder: "Ada Lovelace" %>
             <%= f.label :email do %> <i class="fa fa-envelope"></i> Email<% end %>
             <%= f.text_field :email, placeholder: "ada-lovelace@petsy.com", required: true %>
             <%= f.label :address do %><i class="fa fa-address-card-o"></i> Address <% end %>
