--- a/app/views/orders/check_out.html.erb
+++ b/app/views/orders/check_out.html.erb
@@ -1,4 +1,15 @@
-<%= form_with model: @order, method: :post do |f| %>
+<% if @order.errors.any? %>
+  <ul class="errors">
+    <% @order.errors.each do |column, message| %>
+      <li>
+        <strong><%= column.capitalize %></strong> <%= message %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+
+<div class="check_out_order">
+  <%= form_with model: @order, method: :post do |f| %>
 
     <%= f.label :email  %>
     <%= f.text_field :email, required: true %>
@@ -24,6 +35,7 @@
     <%= f.label :zip_code %>
     <%= f.text_field :zip_code, required: true %>
 
-  <%= f.submit 'Make Purchase' %>
-  
-<% end %>
+    <%= f.submit 'Make Purchase' %>
+    
+  <% end %>
+</div>
