--- a/app/views/orders/check_out.html.erb
+++ b/app/views/orders/check_out.html.erb
@@ -7,15 +7,12 @@
         <div class="row">
           <div class="col-50">
             <h3>Billing Address</h3>
-<!--            example css code-->
-<!--            <label for="fname"><i class="fa fa-user"></i> Full Name </label>-->
-<!--            <input type="text" id="fname" name="firstname" >-->
             <%= f.label :name do %><i class="fa fa-user"></i> Full Name <% end %>
-            <%= f.text_field :name, placeholder: "Ada Lovelace" %, required: true>
+            <%= f.text_field :name, placeholder: "Ada Lovelace", required: true %>
             <%= f.label :email do %> <i class="fa fa-envelope"></i> Email<% end %>
             <%= f.text_field :email, placeholder: "ada-lovelace@petsy.com", required: true %>
             <%= f.label :address do %><i class="fa fa-address-card-o"></i> Address <% end %>
-            <%= f.text_field :address, placeholder: "542 W. 15th Street" %, required: true>
+            <%= f.text_field :address, placeholder: "542 W. 15th Street", required: true %>
             <%= f.label :city do %><i class="fa fa-institution"></i> City<% end %>
             <%= f.text_field :city, placeholder: "Seattle", required: true %>
             <div class="row">
