--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -23,7 +23,7 @@
 </div>
     <div>
       <h2> <span class="spotlight-name">Pet of the day</span></h2>
-      <%= image_tag @churro, class: 'list_image'%>
+      <%= image_tag @churro, class: 'churro_image'%>
 
     </div>
     <!-- /.col-lg-9 -->
