More styling for homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,6 +104,15 @@ footer {
   margin-bottom: 100px;
 }
 
+.list_image_homepage{
+  float: right;
+  width:  360px;
+  height: 300px;
+  object-fit: cover;
+  padding-bottom: 50px;
+  margin-bottom: 100px;
+}
+
 .churro_image {
   float: left;
   width:  350px;
