--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="my-4">pEtsy</h1>
+  <h1 class="my-4"><strong>Welcome to pEtsy, your home for 90's pets! </strong></h1>
   <div class="row">
 <!--    <div class="list-group-homepage">-->
 <!--      <div class="list-group">-->
@@ -13,7 +13,7 @@
     <h2 class="spotlight_header">
       <span class="spotlight-name">Product Spotlight:</span>
      <strong> <%=@spotlight.name%></strong>
-      <%= image_tag @spotlight.photo_url, class: 'list_image'%>
+      <%= image_tag @spotlight.photo_url, class: 'list_image_homepage'%>
 
       <p class="spotlight__description">
         <%= @spotlight.description%></h2>
