--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Orders#index</h1>
-<p>Find me in app/views/orders/index.html.erb</p>
+<h1>Order Fulfillment:</h1>
+<p>Total Revenue: $<%= @current_merchant.total_revenue  %></p>
+<p> Total Revenue by pending (shopping): $<%= @current_merchant.total_revenue('shopping') %></p>
+<p> Total Revenue by paid (processing): $<%= @current_merchant.total_revenue('processing') %></p>
+<p> Total Revenue by complete: $<%= @current_merchant.total_revenue('complete') %> </p>
+<p> Total Revenue by cancelled: $<%= @current_merchant.total_revenue('cancelled') %></p>
+<p> Total Number of Orders: <%= @current_merchant.total_num %></p>
+<p> Total number of orders by pending: <%= @current_merchant.total_num('shopping') %></p>
+<p> Total number of orders by pending: <%= @current_merchant.total_num('processing') %></p>
+<p> Total number of orders by pending: <%= @current_merchant.total_num('complete') %></p>
+<p> Total number of orders by pending: <%= @current_merchant.total_num('cancelled') %></p>
