--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,9 +6,9 @@
 <p> Total Revenue by cancelled: $<%= @current_merchant.total_revenue('cancelled') %></p>
 <p> Total Number of Orders: <%= @current_merchant.total_num %></p>
 <p> Total number of orders by pending: <%= @current_merchant.total_num('shopping') %></p>
-<p> Total number of orders by pending: <%= @current_merchant.total_num('processing') %></p>
-<p> Total number of orders by pending: <%= @current_merchant.total_num('complete') %></p>
-<p> Total number of orders by pending: <%= @current_merchant.total_num('cancelled') %></p>
+<p> Total number of orders by processing: <%= @current_merchant.total_num('processing') %></p>
+<p> Total number of orders by complete: <%= @current_merchant.total_num('complete') %></p>
+<p> Total number of orders by cancelled: <%= @current_merchant.total_num('cancelled') %></p>
 
 <h2> Orders: </h2>
 <ol>
