Created order details page

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,1 +1,28 @@
-"testing show page"
+<h1>Order details </h1>
+Your Order ID: <%= @order.id %>
+
+<table>
+  <tr>
+    <th>Item</th>
+    <th>Quantity</th>
+    <th>Price per unit</th>
+
+  </tr>
+  <% @order.order_items.each do |item| %>
+    <tr>
+      <% @product = Product.find_by(id: item.product_id) %>
+      <td><%= @product.name %></td>
+      <td><%= item.quantity %></td>
+      <td>$<%= @product.price %></td>
+    </tr>
+  <% end %>
+</table>
+
+
+<h2>Shopper details</h2>
+<ul>
+  <li><%= @order.name %> </li>
+  <li><%= @order.name %> </li>
+
+</ul>
+
