--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,9 @@
               <li class="nav-item">
                 <%= link_to "Show Cart", cart_path, class: "nav-link" %>
               </li>
+              <li class="nav-item">
+                <%= link_to "Your Order", order_path(@shopper ), class: "nav-link" %>
+              </li>
             </ul>
           </div>
         </div>
