--- a/app/views/orders/check_out.html.erb
+++ b/app/views/orders/check_out.html.erb
@@ -38,9 +38,9 @@
             </div>
 
             <%= f.label :card_number do %> Credit card number<% end %>
-            <%= f.text_field :card_number, placeholder: "1111-2222-3333-4444", required: true %>
+            <%= f.text_field :card_number, placeholder: "11111222233334444", required: true %>
             <%= f.label :expiration_month do %> Expiration Month<% end %>
-            <%= f.text_field :expiration_month, placeholder: "September", required: true %>
+            <%= f.text_field :expiration_month, placeholder: "09", required: true %>
 
 
             <div class="row">
@@ -55,7 +55,7 @@
             </div>
           </div>
         </div>
-        <%= f.submit 'Make Purchase', class: "btn" %>
+        <%= f.submit 'Make Purchase', class: 'btn btn-primary' %>
       </form>
     </div>
   </div>
