--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,12 +1,12 @@
 <h1>Order details </h1>
 Your Order ID: <%= @order.id %>
 
-<table>
+<table width="80%">
   <tr>
     <th>Item</th>
     <th>Quantity</th>
     <th>Price per unit</th>
-
+    <th>Subtotal</th>
   </tr>
   <% @order.order_items.each do |item| %>
     <tr>
@@ -14,9 +14,12 @@ Your Order ID: <%= @order.id %>
       <td><%= @product.name %></td>
       <td><%= item.quantity %></td>
       <td>$<%= @product.price %></td>
+      <td>$<%= @product.price * item.quantity %></td>
     </tr>
   <% end %>
 </table>
+
+<h1>Grand total: <%= @order.total %></h1>
 
 
 <h2>Shopper details</h2>
