updated testing and require login for merchant

--- a/app/views/merchants/orders_table.html.erb
+++ b/app/views/merchants/orders_table.html.erb
@@ -12,4 +12,14 @@
         <% @current_merchant.orders.uniq.each do |order|%>
         <tr>
             <td><%= link_to "##{order.id}", order_path(order) %></td>
-            <td><%= order.%>
+            <td><%= order.order_belongs_to_merchant?.count %></td>
+            <td><%= order.total_revenue %></td>
+            <td><%= order.status %></td>
+            <% if order.status == 'processing' %>
+                <td><%= button_to "Processing Order", process_order_path(order) %></td>
+            <% end %>
+        </tr>
+        <% end %>
+    </tbody>
+</table> 
+
