Added proper currency formatting everywhere

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,11 +16,12 @@
               <h4 class="card-title">
                 <%= link_to product.name, product_path(product) %>
               </h4>
-              <h5>$<%= product.price %></h5>
+              <h5><%= number_to_currency(product.price) %></h5>
               <p class="card-text"><%= product.description %></p>
             </div>
             <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9733; &#9733;</small>
+              <br><small class="text-muted">Backed by the pEtsy guarantee</small>
             </div>
           </div>
         </div>
