--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -13,13 +13,13 @@ Your Order ID: <%= @order.id %>
       <% @product = Product.find_by(id: item.product_id) %>
       <td><%= @product.name %></td>
       <td><%= item.quantity %></td>
-      <td>$<%= @product.price %></td>
-      <td>$<%= @product.price * item.quantity %></td>
+      <td><%= number_to_currency(@product.price) %></td>
+      <td><%= number_to_currency(@product.price * item.quantity) %></td>
     </tr>
   <% end %>
 </table>
 
-<h1>Grand total: <%= @order.total %></h1>
+<h1>Grand total: <%= number_to_currency(@order.total) %></h1>
 
 
 <h2>Shopper details</h2>
