--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,12 +75,13 @@ body {
   padding-bottom: 100px;
   position: relative;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
+  font-family: 'Baloo Thambi 2', cursive;
+  font-size: 1.2rem;
   font-weight: 400;
   line-height: 1.5;
   text-align: left;
 }
+
 
 footer {
   background-color:#CC490C;
@@ -120,6 +121,14 @@ footer {
   object-fit: cover;
   padding-bottom: 50px;
   margin-bottom: 100px;
+}
+
+.churro-bio {
+  margin-left: 30px;
+  font-family: 'Baloo Thambi 2', cursive;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.5;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
