Added rounded corners to pics

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,6 +103,10 @@ footer {
   object-fit: cover;
   padding-bottom: 50px;
   margin-bottom: 100px;
+  border-radius: 25px;
+  background: #CC490C;
+  padding: 3px;
+
 }
 
 .list_image_homepage{
@@ -110,8 +114,9 @@ footer {
   width:  360px;
   height: 300px;
   object-fit: cover;
-  padding-bottom: 50px;
   margin-bottom: 100px;
+  border-radius: 20px;
+
 }
 
 .churro_image {
@@ -119,8 +124,9 @@ footer {
   width:  350px;
   height: 450px;
   object-fit: cover;
-  padding-bottom: 50px;
   margin-bottom: 100px;
+  border-radius: 20px;
+
 }
 
 .churro-bio {
