--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Order details </h1>
-Your Order ID: <%= @order.id %>
+Your Order ID: <%= @order.id %><br>
+Your Order Status: <%= @order.status %>
 
 <table width="80%">
   <tr>
